# AndroidPyHole-

./: .gitignore  CONTRIBUTING.md  README.md  SPONSORS.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: android-publish.yml  apk-build-ultra.yml  apk-debug.yml  apk-release.yml  debug-apk.yml  npm-release.yml  production-release.yml  pyholex-ci.yml  python-release.yml  release-apk.yml  release.yml  testing.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/androidpyhole/: BootReceiver.kt  Constants.kt  DNSManager.kt  DNSService.kt  GravityUpdateWorker.kt  MainActivity.kt  NativeEngine.kt  RustEngine.kt  SettingsRepository.kt  SplashActivity.kt  VPNServiceBridge.kt
app/src/main/java/com/pyhole/: BlocklistManager.kt  Constants.kt  DNSManager.kt  DNSService.kt  MainActivity.kt  NativeEngine.kt  RustEngine.kt  SplashActivity.kt  VPNServiceBridge.kt
app/src/main/res/drawable/: ic_pyhole_logo.xml  loading_rotate.xml  splash_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
build_scripts/: package_apk.sh  setup_python.sh
gui/: package.json
gui/static/: dashboard.js  styles.css
gui/templates/: alerts.html  clients.html  dashboard.html  login.html  logs.html  network.html  settings.html  statistics.html  tools.html
python/: blocklist.py  clients.py  dashboard.py  dhcp_server.py  dns_server.py  init_memories.py  logger.py  setup.py  test_suite.py  updater.py
rust-dns-engine/: Cargo.toml  rust-toolchain.toml
rust-dns-engine/src/: api.rs  blocklist.rs  classifier.rs  dns_server.rs  lib.rs  logger.rs  main.rs  network_scanner.rs  p2p.rs
storage/: config.json
storage/logs/: query_log.db
