[package]
name = "pyholex-engine"
version = "5.2.0"
edition = "2021"

[lib]
name = "pyhole_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pyholex-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
trust-dns-server = "0.22"
trust-dns-proto = "0.22"
trust-dns-resolver = { version = "0.22", features = ["tokio-runtime", "dns-over-https-rustls", "dns-over-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.28"
warp = "0.3"
log = "0.4"
jni = "0.21"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.5"
lru = "0.7"
